--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
 *{
     margin: 0; padding: 0; box-sizing: border-box;
 }
+body{
+    padding-bottom: 5rem;
+}
 .great-vibes-regular {
     font-family: "Great Vibes", cursive;
     font-weight: 400;
